# ChemoDOTS-Backend

./: Cargo.toml
api/: Callscript_func.js  Callscript_growing.js  Callscript_pp_filter.js  Callscript_pp_gen2d.js  Callscript_pp_gen3d.js  Callscript_toolkit.js  app.js
api/Python/: Search_Function.py  moieties.py  rules_dico.py
common/: Cargo.toml
common/src/: lib.rs
db/: Cargo.toml  diesel.toml
db/migrations/2023-03-20-101625_bootstrap/: down.sql  up.sql
db/src/: custom.rs  expression.rs  lib.rs  main.rs  model.rs  schema.rs
postproc/: Cargo.toml
postproc/src/: lib.rs
reactor/: Cargo.toml
reactor/src/: lib.rs  main.rs  plot.rs
toolkit/: Cargo.toml
toolkit/src/: lib.rs  main.rs
updater/: Cargo.toml
updater/src/: main.rs
