[workspace]
resolver = "2"
members = [
	# "api",
	"db",
	"common",
	"postproc",
	"reactor",
	"toolkit",
	"updater",
]

[profile.release]
debug = true
split-debuginfo = "packed"
opt-level = 3
lto = "thin"

[profile.release.package."chemodots-db"]
# Build time takes forever for opt-level > 1
opt-level = 1
