[package]
name = "chemodots-reactor"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
chrono = "0.4"
crossbeam = "0.8"
const-hex = "1.9"
field_count = "0.1.1"
itertools = "0.12.0"
num_cpus = "1.16"
plotters = { version = "0.3.5", default-features = false, features = ["ab_glyph", "all_elements", "all_series", "bitmap_backend", "bitmap_encoder", "svg_backend"] }
rayon = "1.8"
rust_decimal = "1.32.0"
serde_json = "1.0"
serde = "1.0"
unicode-segmentation = "1.11"
uuid = { version = "1.5.0", features = [ "serde" ] }
zip_next = "0.10.3"
chemodots-db = { path = "../db" }
chemodots-common = { path = "../common" }
rdkit-rust = { path = "../../../rdkit-rust" }
