[package]
name = "chemodots-updater"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
chrono = { version = "0.4" }
crossbeam = "0.8"
const-hex = "1.9"
field_count = "0.1.1"
itertools = "0.12"
num_cpus = "1.16"
rayon = "1.8"
serde_json = "1.0"
chemodots-db = { path = "../db" }
chemodots-common = { path = "../common" }
rdkit-rust = { path = "../../../rdkit-rust" }
